# claude-tracker

./: Cargo.toml
.claude/: .metadata.json
.claude/rules/: code-style.md  testing.md
.makeitso/: mis.toml
.makeitso/plugins/claude/: manifest.toml
notes/: 00-feature-plan-template.md  01-spike-plan.md  02-session-scanner.md  03-display-mockup.md  04-refresh-loop.md  05-token-tracking.md  06-session-persistence.md  07-timeframe-toggle.md  08-keychain-secret-storage.md  09-clockify-spike.md  10-clockify-sync.md  10a_idempotency-design.md  10b_transformation.md  10c_clockify-http-client.md  10d_sync-loop.md  backlog.md
src/: clockify.rs  main.rs  parser.rs  scanner.rs  secrets.rs  spinner.rs  store.rs  sync.rs
src/clockify/: tests.rs
src/parser/: tests.rs
src/scanner/: tests.rs
src/secrets/: tests.rs
src/spinner/: tests.rs
src/store/: tests.rs
src/sync/: tests.rs
