[package]
name = "claude-tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
ratatui = "0.29.0"
crossterm = "0.29.0"
toml = "0.9.11"
rusqlite = { version = "0.31", features = ["bundled"] }
clap = "4"
keyring = "2"

[dev-dependencies]
tempfile = "3"
